info.css
@layer global, component, utility; /*establishes order of the layers*/ 

@layer global {
  /* Downloading Font Styles*/ 
/* archivo-regular - latin */
@font-face {
  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
  font-family: 'Archivo';
  font-style: normal;
  font-weight: 400;
  src: url('/fonts/archivo-v25-latin-regular.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
}
/* archivo-600 - latin */
@font-face {
  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
  font-family: 'Archivo';
  font-style: normal;
  font-weight: 600;
  src: url('/fonts/archivo-v25-latin-600.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
}
/* archivo-700 - latin */
@font-face {
  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
  font-family: 'Archivo';
  font-style: normal;
  font-weight: 700;
  src: url('/fonts/archivo-v25-latin-700.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
}
/* mountains-of-christmas-regular - latin */
@font-face {
  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
  font-family: 'Mountains of Christmas';
  font-style: normal;
  font-weight: 400;
  src: url('/fonts/mountains-of-christmas-v24-latin-regular.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
}
/* mountains-of-christmas-700 - latin */
@font-face {
  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
  font-family: 'Mountains of Christmas';
  font-style: normal;
  font-weight: 700;
  src: url('/fonts/mountains-of-christmas-v24-latin-700.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
}



/* Colours */
:root {
    --c-green: hsl(76, 31%, 52%); 
    --c-white: hsl(0, 0%, 100%); 
    --c-blue: hsl(226, 20%, 38%); 
    --c-transparent: tranparent; 

    --color-main-bg: var(--c-green); /* identiy where colour will be use*/
    --color-text-light: var(--c-white);
    -color-text-dark: var(--c-blue); 
    --color-button-primary-bg: var(--c-blue);
    --color-footer-bg: var(--c-blue);
    --color-button-secondary-bg: var(--c-transparent);
    --color-button-secondary-border: var(--c-white);
    --color-button-secondary-text: var(--c-white);
}

/*Fonts*/ 
:root{
  --fs-40: calc(40 / 16 * 1rem); 
  --fs-24: calc(24 / 16 * 1rem); 
  --fs-10: calc( 10 / 16 * 1rem);
  --fs-14: calc( 14 / 16 * 1rem);
  --fs-12: calc( 12 / 16 * 1rem);
  --fs-8: calc( 8 / 16 * 1rem);
  --fs-6: calc( 6 / 16 * 1rem);

  --font-size-h1: var(--fs-40); /* brand name on top of nav bar */ 
  --font-size-p: var(--fs-10); /* additional text or brand information*/ 
  --font-size-h3: var(--fs-10); /* button size remains the same on both devices */ 
  --font-size-filter: var(--fs-14); /* font for options on filter bar */ 
  --font-size-footer: var(--fs-12); /* font for social media options in footer*/ 
  --font-size-h2: var(--fs-12); /* used for product info*/ 
}

  @media (min-wdith: 37.5rem){ /*(media acts to overide values)setting breaking point where device view shifts*/
  :root{ /* redefines the values*/. 
  --font-size-h1: var(--fs-24);
  --font-size-p: var(--fs-10);
  --font-size-filter: var(--fs-8);
  --font-size-footer: var(--fs-6);
  --font-size-h2: var(--fs-10);
    }
  }  



/* CSS Reset*/

*,*::before, *::after {
    box-sizing: border-box;
} /*ensure padding and border don't won't add on top of widht/height set on element */

*{
    margin: 0; /*cancels out resets that come from browsers*/
}

body {
    font-family: "Archivo", Arial, Helvetica, sans-serif ; /* Set Archivo as default font family*/
    line-height: 1.3;
    color: var(--color-text-light);
    background-color: var(--color-main-bg);
    padding-block-end: 50vh; /*TEMPORARY adds space 50% of viewport height at bottom of bodytag*/
}


/* Redefining font sizes*/ 
h1, h2, h3 { /* setting height of line to slightly more than font size*/ 
  line-height: 1.1;
}

h1 { /* allocating changed measurements to font size*/ 
  font-size: var(--font-size-h1);
}

h2{
  font-size: var(--font-size-h2);
}

h3 {
  font-size: var(--font-size-h3);
}

h4 {
  font-size: var(--font-size-filter);
}

p {
  font-size: var(--font-size-p)
}

/* Further resets*/ 
a {
    text-decoration: none; /* removes any prelim settings from browser*/
}

img, picture, svg {
    max-width: 100%; /* won't get larger than parent when loaded*/
    display: block; /* makes easier to position in layout*/
}

.wrapper {
    width: min(calc(100%-48px), cal(1200/16*1rem)); /* rem used for fonts as they do scale up when size changed */
    margin-inline: auto; /* fix spacing and center within wrapper and make margin on left and right take up all space available */
}
}
 @layer component {

 /* NAV BAR */ 
  .topnav ul {
  list-style-type: none; /* Removes bullet points */
  margin: 0;
  padding: 8;
  display: flex; /* Aligns icons horizontally */
  background-color: var(--color-main-bg);
  justify-content: space-around; /* Evenly spaces items */
  position: sticky;
}

.topnav img {
  width: 100%; /* Set consistent icon size */
  height: auto;
  display: block;
  padding: 10px; /* Increase clickable area */
}

.topnav a:hover img {
  opacity: 0.6; /* Visual feedback on hover */
  transition: 0.3s;
}

/* PRODUCT DESIGN*/ 
#product1{
  text-align: left;
}
 
#product1 .pro-container{
  display: flex;
  flex-wrap: wrap;
  gap: 20px;
  padding-top: 20px;
}

#product1 .pro-container {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
  gap: 20px;
}

#product1 .pro{
flex: 1 1 250px; /* grows/shrink/base width*/ 
max-width: 250px;
padding: 10px 12px;
cursor: pointer;
}

#product1 .pro img {
  width: 100%;
  aspect-ratio: 1 / 1;   /* or 4 / 5 for clothing */
  object-fit: cover;
}
#product1 .pro img{
  width: 100%;
  border-radius: 20px;
}

.plusbutton{
  display: flex;
  justify-content: space-between;
}
 }

@layer utility {

}

